--- a/FrontEnd/ClientApp/src/app/app.component.html
+++ b/FrontEnd/ClientApp/src/app/app.component.html
@@ -1,12 +1,14 @@
 <body>
-  <!--<app-nav-menu></app-nav-menu>-->
-  <div class="row">
-    <div class="col-lg-3">
-      <app-sidebar></app-sidebar>
-    </div>
-    <div class="col-lg-9">
-      <div class="container">
-        <router-outlet></router-outlet>
+  <app-nav-menu></app-nav-menu>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3">
+        <app-sidebar></app-sidebar>
+      </div>
+      <div class="col-lg-8">
+        <div class="container-fluid">
+          <router-outlet></router-outlet>
+        </div>
       </div>
     </div>
   </div>
