FE - Aggiunti elementi in sidebar

--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -99,6 +99,18 @@
                 Classifica globale
               </a>
             </li>
+            <li>
+              <a href="elements-buttons-standard.html">
+                <i class="metismenu-icon"></i>
+                Classifica in casa
+              </a>
+            </li>
+            <li>
+              <a href="elements-buttons-standard.html">
+                <i class="metismenu-icon"></i>
+                Classifica in trasferta
+              </a>
+            </li>
           </ul>
         </li>
         <li>
@@ -108,14 +120,15 @@
             Marcatori
           </a>
         </li>
-        <!--<li class="app-sidebar__heading">Charts</li>
+        <li class="app-sidebar__heading">TRASFERIMENTI</li>
         <li>
           <a href="charts-chartjs.html">
             <i class="metismenu-icon pe-7s-graph2">
-            </i>ChartJS
+            </i>
+            Tutti i trasferimenti
           </a>
         </li>
-        <li class="app-sidebar__heading">PRO Version</li>
+        <!--<li class="app-sidebar__heading">PRO Version</li>
         <li>
           <a href="https://dashboardpack.com/theme-details/architectui-dashboard-html-pro/" target="_blank">
             <i class="metismenu-icon pe-7s-graph2">
