--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -80,15 +80,13 @@
         <li class="app-sidebar__heading">CAMPIONATO</li>
         <li>
           <a href="forms-controls.html">
-            <i class="metismenu-icon pe-7s-mouse">
-            </i>
-            Giornate
+            <i class="metismenu-icon pe-7s-mouse"></i>
+            Calendario
           </a>
         </li>
         <li>
           <a href="forms-layouts.html">
-            <i class="metismenu-icon pe-7s-eyedropper">
-            </i>
+            <i class="metismenu-icon pe-7s-eyedropper"></i>
             Classifica
             <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
           </a>
@@ -115,16 +113,14 @@
         </li>
         <li>
           <a href="forms-validation.html">
-            <i class="metismenu-icon pe-7s-pendrive">
-            </i>
+            <i class="metismenu-icon pe-7s-pendrive"></i>
             Marcatori
           </a>
         </li>
         <li class="app-sidebar__heading">TRASFERIMENTI</li>
         <li>
           <a href="charts-chartjs.html">
-            <i class="metismenu-icon pe-7s-graph2">
-            </i>
+            <i class="metismenu-icon pe-7s-graph2"></i>
             Tutti i trasferimenti
           </a>
         </li>
