--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -117,6 +117,25 @@
             Marcatori
           </a>
         </li>
+        <li class="app-sidebar__heading">GIUDICE SPORTIVO</li>
+        <li>
+          <a href="charts-chartjs.html">
+            <i class="metismenu-icon pe-7s-graph2"></i>
+            Tutti i cartellini
+          </a>
+        </li>
+        <li>
+          <a href="charts-chartjs.html">
+            <i class="metismenu-icon pe-7s-graph2"></i>
+            Aggiungi cartellino
+          </a>
+        </li>
+        <li>
+          <a href="charts-chartjs.html">
+            <i class="metismenu-icon pe-7s-graph2"></i>
+            Modifica cartellino
+          </a>
+        </li>
         <li class="app-sidebar__heading">TRASFERIMENTI</li>
         <li>
           <a href="charts-chartjs.html">
@@ -124,14 +143,18 @@
             Tutti i trasferimenti
           </a>
         </li>
-        <!--<li class="app-sidebar__heading">PRO Version</li>
         <li>
-          <a href="https://dashboardpack.com/theme-details/architectui-dashboard-html-pro/" target="_blank">
-            <i class="metismenu-icon pe-7s-graph2">
-            </i>
-            Upgrade to PRO
+          <a href="charts-chartjs.html">
+            <i class="metismenu-icon pe-7s-graph2"></i>
+            Nuovo trasferimento
           </a>
-        </li>-->
+        </li>
+        <li>
+          <a href="charts-chartjs.html">
+            <i class="metismenu-icon pe-7s-graph2"></i>
+            Modifica trasferimento
+          </a>
+        </li>
       </ul>
     </div>
   </div>
