--- a/FrontEnd/ClientApp/src/app/home/home.component.html
+++ b/FrontEnd/ClientApp/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="app-main__outer">
   <div class="app-main__inner">
-    <div class="app-page-title">
+    <!-- <div class="app-page-title">
       <div class="page-title-wrapper">
         <div class="page-title-heading">
           <div class="page-title-icon">
@@ -66,7 +66,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--<div class="row">
     <div class="col-md-6 col-xl-4">
