--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -34,14 +34,14 @@
       <ul class="vertical-nav-menu">
         <li class="app-sidebar__heading">Dashboards</li>
         <li>
-          <a href="index.html" class="mm-active">
+          <a [routerLink]='[""]'>
             <i class="metismenu-icon pe-7s-rocket"></i>
             Dashboard
           </a>
         </li>
         <li class="app-sidebar__heading">SQUADRE</li>
         <li>
-          <a href="#">
+          <a [routerLink]='["/teams"]'>
             <i class="metismenu-icon pe-7s-diamond"></i>
             Tutte le squadre
           </a>
