--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a [routerLink]='["/team/create"]'>
             <i class="metismenu-icon pe-7s-car"></i>
             Nuova squadra
           </a>
