--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -159,8 +159,12 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-        <script>
+<!-- <script>
   // Example starter JavaScript for disabling form submissions if there are invalid fields
           (function () {
             'use strict';
@@ -179,8 +183,4 @@
               });
             }, false);
           })();
-        </script>
-      </div>
-    </div>
-  </div>
-</div>
+        </script> -->
