--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -7,8 +7,11 @@
             <i class="lnr-picture text-danger">
             </i>
           </div>
-          <div>
+          <div *ngIf="team">
             {{team.name}}
+          </div>
+          <div *ngIf="!team">
+            CREAZIONE NUOVA SQUADRA
           </div>
         </div>
       </div>
@@ -72,19 +75,23 @@
 
           <button class="btn btn-primary mr-5" type="submit" (click)="update()" *ngIf="isReadOnly">Modifica</button>
         </form>
+      </div>
+    </div>
 
-        <!-- altre informazioni -->
+    <!-- altre informazioni -->
+    <div class="main-card mb-3 card" *ngIf="isReadOnly">
+      <div class="card-body">
         <!-- header del tab -->
-        <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav">
+        <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav mb-3">
           <li class="nav-item">
-              <a role="tab" class="nav-link" id="tab-1" data-toggle="tab" href="#tab-content-1">
-                <span>Rosa</span>
-              </a>
+            <a role="tab" class="nav-link active show" id="tab-1" data-toggle="tab" href="#tab-content-1">
+              <span>Rosa</span>
+            </a>
           </li>
           <li class="nav-item">
-              <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
-                 <span>Classifica</span>
-              </a>
+            <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-2">
+              <span>Classifica</span>
+            </a>
           </li>
           <li class="nav-item">
             <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-3">
@@ -96,66 +103,89 @@
               <span>Statistiche</span>
             </a>
           </li>
+          <li class="nav-item">
+            <a role="tab" class="nav-link" id="tab-" data-toggle="tab" href="#tab-content-5">
+              <span>Trasferimenti</span>
+            </a>
+          </li>
         </ul>
 
         <!-- contenuto del tab -->
         <div class="tab-content">
+
+          <!-- tab 1 -->
           <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="main-card mb-3 card">
-                        <div class="card-body"><h5 class="card-title">Basic Example</h5>
-                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+              <div class="table-responsive">
+                <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Cognome Nome</th>
+                      <!--<th>Nome</th>-->
+                      <th>Anno</th>
+                      <th>Ruolo</th>
+                      <th>Piede</th>
+                      <th>Provenienza</th>
+                      <th>Dettagli</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let player of players">
+                      <td>
+                        <div class="widget-content p-0">
+                          <div class="widget-content-wrapper">
+                            <div class="widget-content-left mr-3">
+                              <div class="widget-content-left">
+                                <img width="50" class="rounded-circle" src="assets/avatars/4.jpg" alt="">
+                              </div>
+                            </div>
+                            <div class="widget-heading font-weight-bold">{{player.lastname.toUpperCase()}} {{player.firstname}}</div>
+                          </div>
                         </div>
-                    </div>
-                    <div class="main-card mb-3 card">
-                        <div class="card-body"><h5 class="card-title">Card with Subtitle</h5><h6 class="card-subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h6>
-                          <p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis eni</p>
-                        </div>
-                    </div>
-                    <div class="mb-3 card card-body"><h5 class="card-title">Special Title Treatment</h5>With supporting text below as a natural lead-in to additional content.
-                        <button class="btn btn-primary">Go somewhere</button>
-                    </div>
-                    <div class="mb-3 text-center card card-body"><h5 class="card-title">Special Title Treatment</h5>With supporting text below as a natural lead-in to additional content.
-                        <button class="btn btn-danger">Go somewhere</button>
-                    </div>
-                    <div class="mb-3 text-right card card-body"><h5 class="card-title">Special Title Treatment</h5>With supporting text below as a natural lead-in to additional content.
-                        <button class="btn btn-outline-focus">Go somewhere</button>
-                    </div>
-                    <div class="main-card mb-3 card">
-                        <div class="card-header">Header</div>
-                        <div class="card-body"><h5 class="card-title">Special Title Treatment</h5>With supporting text below as a natural lead-in to additional content.
-                            <button class="btn btn-warning">Go somewhere</button>
-                        </div>
-                        <div class="card-footer">Footer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="main-card mb-3 card"><img width="100%" src="https://placeholdit.imgix.net/~text?txtsize=33&amp;txt=318%C3%97180&amp;w=318&amp;h=180" alt="Card image cap" class="card-img-top">
-                        <div class="card-body"><h5 class="card-title">Card title</h5><h6 class="card-subtitle">Card subtitle</h6>Some quick example text to build on the card title and make up the bulk of the card's content.
-                            <button class="btn btn-secondary">Button</button>
-                        </div>
-                    </div>
-                    <div class="main-card mb-3 card">
-                        <div class="card-body"><h5 class="card-title">Card Title</h5>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                        <img width="100%" src="https://placeholdit.imgix.net/~text?txtsize=33&amp;txt=318%C3%97180&amp;w=318&amp;h=180" alt="Card image cap" class="card-img-bottom"></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="main-card mb-3 card">
-                        <div class="card-body"><h5 class="card-title">Card title</h5><h6 class="mb-0 card-subtitle">Card subtitle</h6></div>
-                        <img width="100%" src="https://placeholdit.imgix.net/~text?txtsize=33&amp;txt=318%C3%97180&amp;w=318&amp;h=180" alt="Card image cap">
-                        <div class="card-body">Some quick example text to build on the card title and make up the bulk of the card's content.<a href="javascript:void(0);" class="card-link">Card Link</a><a href="javascript:void(0);"
-                                                                                                                                                                                                            class="card-link">Another
-                            Link</a></div>
-                    </div>
-                    <div class="main-card mb-3 card"><img width="100%" src="https://placeholdit.imgix.net/~text?txtsize=33&amp;txt=318%C3%97180&amp;w=318&amp;h=180" alt="Card image cap" class="card-img-top">
-                        <div class="card-body"><h5 class="card-title">Card Title</h5>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>
+                      </td>
+                      <!--<td>{{player.firstname}}</td>-->
+                      <td>{{player.age}}</td>
+                      <td>{{player.roleString}}</td>
+                      <td>{{player.feetString}}</td>
+                      <td>{{player.lastTeamString}}</td>
+                      <td>{{player.details}}</td>
+                      <td>
+                        <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(player.id)">
+                          <i class="pe-7s-pen"></i>
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
+          <!-- tab 2 -->
+          <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
+            <div class="row" style="background-color:blue">
+              <p>TAB 1</p>
+            </div>
+          </div>
+
+          <!-- tab 3 -->
+          <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
+            <div class="row" style="background-color:green">
+              <p>TAB 3</p>
+            </div>
+          </div>
+
+          <!-- tab 4 -->
+          <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
+            <div class="row" style="background-color:yellow">
+              <p>TAB 4</p>
+            </div>
+          </div>
+
+          <!-- tab 5 -->
+          <div class="tab-pane tabs-animation fade" id="tab-content-5" role="tabpanel">
+            <div class="row" style="background-color:pink">
+              <p>TAB 5</p>
             </div>
           </div>
         </div>
