--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -11,7 +11,7 @@
             {{team.name}}
           </div>
           <div *ngIf="!team">
-            CREAZIONE NUOVA SQUADRA
+            NUOVA SQUADRA
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a role="tab" class="nav-link" id="tab-" data-toggle="tab" href="#tab-content-5">
+            <a role="tab" class="nav-link" id="tab-5" data-toggle="tab" href="#tab-content-5">
               <span>Trasferimenti</span>
             </a>
           </li>
@@ -121,11 +121,12 @@
                   <thead>
                     <tr>
                       <th>Cognome Nome</th>
-                      <!--<th>Nome</th>-->
                       <th>Anno</th>
                       <th>Ruolo</th>
                       <th>Piede</th>
                       <th>Provenienza</th>
+                      <th>Partite</th>
+                      <th>Gol Fatti</th>
                       <th>Dettagli</th>
                     </tr>
                   </thead>
@@ -143,11 +144,12 @@
                           </div>
                         </div>
                       </td>
-                      <!--<td>{{player.firstname}}</td>-->
                       <td>{{player.age}}</td>
                       <td>{{player.roleString}}</td>
                       <td>{{player.feetString}}</td>
                       <td>{{player.lastTeamString}}</td>
+                      <td>1</td>
+                      <td>0</td>
                       <td>{{player.details}}</td>
                       <td>
                         <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(player.id)">
