aggiunto font-awesome aggiornata la stringa di connession e (aggiunta la mia)

--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
         <li class="app-sidebar__heading">Dashboards</li>
         <li>
           <a [routerLink]='[""]'>
-            <i class="metismenu-icon pe-7s-rocket"></i>
+            <i class="metismenu-icon fa fa-bath"></i>
             Dashboard
           </a>
         </li>
