--- a/FrontEnd/ClientApp/src/app/player/player.component.html
+++ b/FrontEnd/ClientApp/src/app/player/player.component.html
@@ -61,17 +61,17 @@
                   Please provide a valid city.
                 </div>
               </div>
-              <!--<div class="col-md-4 mb-3">
+              <div class="col-md-4 mb-3">
                 <label for="validationCustom03">Ruolo</label>
-                <select name="select" id="select-role" class="form-control" [(ngModel)]="role">
-                  <option *ngFor="let r of roles" [value]="role">{{r}}</option>
+                <select name="select" id="select-role" class="form-control" [(ngModel)]="selectedRole">
+                  <option *ngFor="let r of roles" [value]="r.description">{{r.description}}</option>
                 </select>
-              </div>-->
+              </div>
             </div>
             <div class="form-row">
               <div class="col-md-2 mb-3">
                 <label for="validationCustom03">Piede</label>
-                <select name="select" id="select-feet" class="form-control" [(ngModel)]="selectedFeet" (change)="onChangeFeet($event)">
+                <select name="select" id="select-feet" class="form-control" [(ngModel)]="selectedFeet">
                   <option *ngFor="let f of feets" [value]="f.description">{{f.description}}</option>
                 </select>
               </div>
