--- a/FrontEnd/ClientApp/src/app/player/player.component.html
+++ b/FrontEnd/ClientApp/src/app/player/player.component.html
@@ -8,7 +8,7 @@
             </i>
           </div>
           <div *ngIf="player">
-            {{player.name}}
+            {{playerFullName}}
           </div>
           <div *ngIf="!player">
             NUOVO GIOCATORE
