--- a/FrontEnd/ClientApp/src/app/home/home.component.html
+++ b/FrontEnd/ClientApp/src/app/home/home.component.html
@@ -152,7 +152,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <tr *ngFor="let rank in ranking">
                   <td class="text-center text-muted">#345</td>                  
                   <td class="text-center">Squadra</td> 
                   <td class="text-center">Giocate</td>
