--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -60,8 +60,8 @@
           </a>
         </li>
         <li>
-          <a href="dashboard-boxes.html">
-            <i class="metismenu-icon pe-7s-display2"></i>
+          <a [routerLink]='["/player/create"]'>
+            <i class="metismenu-icon pe-7s-car"></i>
             Nuovo giocatore
           </a>
         </li>
@@ -82,7 +82,7 @@
             <li>
               <a href="elements-buttons-standard.html">
                 <i class="metismenu-icon"></i>
-                Classifica globale
+                Classifica
               </a>
             </li>
             <li>
@@ -95,6 +95,18 @@
               <a href="elements-buttons-standard.html">
                 <i class="metismenu-icon"></i>
                 Classifica in trasferta
+              </a>
+            </li>
+            <li>
+              <a href="elements-buttons-standard.html">
+                <i class="metismenu-icon"></i>
+                Classifica miglior attacco
+              </a>
+            </li>
+            <li>
+              <a href="elements-buttons-standard.html">
+                <i class="metismenu-icon"></i>
+                Classifica miglior difesa
               </a>
             </li>
           </ul>
