WIP Nuovo giocatore

--- a/FrontEnd/ClientApp/src/app/player/player.component.html
+++ b/FrontEnd/ClientApp/src/app/player/player.component.html
@@ -85,7 +85,7 @@
             <div class="form-row">
               <div class="col-md-12 mb-3">
                 <label for="validationCustom">Dettagli</label>
-                <textarea name="text" id="details" class="form-control" [(ngModel)]="details"></textarea>
+                <textarea name="text" id="details" class="form-control" placeholder="Dettagli" [(ngModel)]="details"></textarea>
               </div>
             </div>
           </fieldset>
