--- a/FrontEnd/ClientApp/src/app/home/home.component.html
+++ b/FrontEnd/ClientApp/src/app/home/home.component.html
@@ -174,8 +174,10 @@
       </div>
     </div>
 
-    <!-- ULTIMA GIORNATE E PROSSIMA GIORNATA -->
+    <!-- GIORNATE -->
     <div class="row">
+
+      <!-- ULTIMA GIORNATA -->
       <div class="col-md-12 col-lg-6">
         <div class="mb-3 card"  *ngIf="lastRound">
           <div class="card-header-tab card-header-tab-animation card-header">
@@ -202,6 +204,8 @@
           </div>
         </div>
       </div>
+
+      <!-- PROSSIMA GIORNATA -->
       <div class="col-md-12 col-lg-6">
         <div class="mb-3 card" *ngIf="nextRound">
           <div class="card-header-tab card-header">
@@ -221,205 +225,6 @@
               </tbody>
             </table>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <!--<div class="row">
-    <div class="col-md-6 col-xl-4">
-      <div class="card mb-3 widget-content">
-        <div class="widget-content-outer">
-          <div class="widget-content-wrapper">
-            <div class="widget-content-left">
-              <div class="widget-heading">Total Orders</div>
-              <div class="widget-subheading">Last year expenses</div>
-            </div>
-            <div class="widget-content-right">
-              <div class="widget-numbers text-success">1896</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-xl-4">
-      <div class="card mb-3 widget-content">
-        <div class="widget-content-outer">
-          <div class="widget-content-wrapper">
-            <div class="widget-content-left">
-              <div class="widget-heading">Products Sold</div>
-              <div class="widget-subheading">Revenue streams</div>
-            </div>
-            <div class="widget-content-right">
-              <div class="widget-numbers text-warning">$3M</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-xl-4">
-      <div class="card mb-3 widget-content">
-        <div class="widget-content-outer">
-          <div class="widget-content-wrapper">
-            <div class="widget-content-left">
-              <div class="widget-heading">Followers</div>
-              <div class="widget-subheading">People Interested</div>
-            </div>
-            <div class="widget-content-right">
-              <div class="widget-numbers text-danger">45,9%</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="d-xl-none d-lg-block col-md-6 col-xl-4">
-      <div class="card mb-3 widget-content">
-        <div class="widget-content-outer">
-          <div class="widget-content-wrapper">
-            <div class="widget-content-left">
-              <div class="widget-heading">Income</div>
-              <div class="widget-subheading">Expected totals</div>
-            </div>
-            <div class="widget-content-right">
-              <div class="widget-numbers text-focus">$147</div>
-            </div>
-          </div>
-          <div class="widget-progress-wrapper">
-            <div class="progress-bar-sm progress-bar-animated-alt progress">
-              <div class="progress-bar bg-info" role="progressbar" aria-valuenow="54" aria-valuemin="0" aria-valuemax="100" style="width: 54%;"></div>
-            </div>
-            <div class="progress-sub-label">
-              <div class="sub-label-left">Expenses</div>
-              <div class="sub-label-right">100%</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>-->
-
-    <!--<div class="row">
-      <div class="col-md-6 col-lg-3">
-        <div class="card-shadow-danger mb-3 widget-chart widget-chart2 text-left card">
-          <div class="widget-content">
-            <div class="widget-content-outer">
-              <div class="widget-content-wrapper">
-                <div class="widget-content-left pr-2 fsize-1">
-                  <div class="widget-numbers mt-0 fsize-3 text-danger">71%</div>
-                </div>
-                <div class="widget-content-right w-100">
-                  <div class="progress-bar-xs progress">
-                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="71" aria-valuemin="0" aria-valuemax="100" style="width: 71%;"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="widget-content-left fsize-1">
-                <div class="text-muted opacity-6">Income Target</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        <div class="card-shadow-success mb-3 widget-chart widget-chart2 text-left card">
-          <div class="widget-content">
-            <div class="widget-content-outer">
-              <div class="widget-content-wrapper">
-                <div class="widget-content-left pr-2 fsize-1">
-                  <div class="widget-numbers mt-0 fsize-3 text-success">54%</div>
-                </div>
-                <div class="widget-content-right w-100">
-                  <div class="progress-bar-xs progress">
-                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="54" aria-valuemin="0" aria-valuemax="100" style="width: 54%;"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="widget-content-left fsize-1">
-                <div class="text-muted opacity-6">Expenses Target</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        <div class="card-shadow-warning mb-3 widget-chart widget-chart2 text-left card">
-          <div class="widget-content">
-            <div class="widget-content-outer">
-              <div class="widget-content-wrapper">
-                <div class="widget-content-left pr-2 fsize-1">
-                  <div class="widget-numbers mt-0 fsize-3 text-warning">32%</div>
-                </div>
-                <div class="widget-content-right w-100">
-                  <div class="progress-bar-xs progress">
-                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100" style="width: 32%;"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="widget-content-left fsize-1">
-                <div class="text-muted opacity-6">Spendings Target</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        <div class="card-shadow-info mb-3 widget-chart widget-chart2 text-left card">
-          <div class="widget-content">
-            <div class="widget-content-outer">
-              <div class="widget-content-wrapper">
-                <div class="widget-content-left pr-2 fsize-1">
-                  <div class="widget-numbers mt-0 fsize-3 text-info">89%</div>
-                </div>
-                <div class="widget-content-right w-100">
-                  <div class="progress-bar-xs progress">
-                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100" style="width: 89%;"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="widget-content-left fsize-1">
-                <div class="text-muted opacity-6">Totals Target</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>-->
-
-  </div>
-
-  <!-- FOOTER -->
-  <div class="app-wrapper-footer">
-    <div class="app-footer">
-      <div class="app-footer__inner">
-        <div class="app-footer-left">
-          <ul class="nav">
-            <li class="nav-item">
-              <a href="javascript:void(0);" class="nav-link">
-                Footer Link 1
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript:void(0);" class="nav-link">
-                Footer Link 2
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="app-footer-right">
-          <ul class="nav">
-            <li class="nav-item">
-              <a href="javascript:void(0);" class="nav-link">
-                Footer Link 3
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="javascript:void(0);" class="nav-link">
-                <div class="badge badge-success mr-1 ml-0">
-                  <small>NEW</small>
-                </div>
-                Footer Link 4
-              </a>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
