--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -54,7 +54,7 @@
         </li>
         <li class="app-sidebar__heading">GIOCATORI</li>
         <li>
-          <a href="dashboard-boxes.html">
+          <a [routerLink]='["/players"]'>
             <i class="metismenu-icon pe-7s-display2"></i>
             Tutti i giocatori
           </a>
