--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -132,7 +132,7 @@
         </li>
         <li class="app-sidebar__heading">TRASFERIMENTI</li>
         <li>
-          <a href="charts-chartjs.html">
+          <a [routerLink]='["/transfers"]'>
             <i class="metismenu-icon pe-7s-graph2"></i>
             Tutti i trasferimenti
           </a>
