--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -138,7 +138,7 @@
           </a>
         </li>
         <li>
-          <a href="charts-chartjs.html">
+          <a [routerLink]='["/transfer/create"]'>
             <i class="metismenu-icon pe-7s-graph2"></i>
             Nuovo trasferimento
           </a>
