--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -121,13 +121,7 @@
         <li>
           <a href="charts-chartjs.html">
             <i class="metismenu-icon pe-7s-graph2"></i>
-            Tutti i cartellini
-          </a>
-        </li>
-        <li>
-          <a href="charts-chartjs.html">
-            <i class="metismenu-icon pe-7s-graph2"></i>
-            Aggiungi cartellino
+            Disciplinare
           </a>
         </li>
         <li class="app-sidebar__heading">TRASFERIMENTI</li>
