--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -53,21 +53,10 @@
                 Please provide a valid city.
               </div>
             </div>
-            <!--<div class="col-md-3 mb-3">
-      <label for="validationCustom04">State</label>
-      <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
-      <div class="invalid-feedback">
-        Please provide a valid state.
-      </div>
-    </div>-->
-            <!--<div class="col-md-3 mb-3">
-      <label for="validationCustom05">Zip</label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-      <div class="invalid-feedback">
-        Please provide a valid zip.
-      </div>
-    </div>-->
           </div>
+          <!--<div class="form-row" *ngIf="isError">
+            <label>{{errorMessage}}</label>
+          </div>-->
 
           <!-- button -->
           <button class="btn btn-primary mr-2" type="submit" (click)="save(false)" *ngIf="!isReadOnly">Salva</button>
@@ -127,7 +116,7 @@
                       <th>Piede</th>
                       <th>Provenienza</th>
                       <th>Partite</th>
-                      <th>Gol Fatti</th>                      
+                      <th>Gol Fatti</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -149,7 +138,7 @@
                       <td>{{player.feetString}}</td>
                       <td>{{player.lastTeamString}}</td>
                       <td>1</td>
-                      <td>0</td>                      
+                      <td>0</td>
                       <td>
                         <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(player.id)">
                           <i class="pe-7s-pen"></i>
@@ -190,6 +179,27 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- MODALE DI ERRORE -->
+<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" [ngStyle]="{'display': errorModalIsOpen ? 'block' : 'none', 'opacity': 1}">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="mb-0">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
