--- a/FrontEnd/ClientApp/src/app/transfer/transfer.component.html
+++ b/FrontEnd/ClientApp/src/app/transfer/transfer.component.html
@@ -23,7 +23,7 @@
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="validationCustom03">Squadra Attuale</label>
-                <select name="select-team-old" id="select-role" class="form-control" [(ngModel)]="selectedTeamOld">
+                <select name="select-team-old" id="select-role" class="form-control" [(ngModel)]="selectedTeamOld" (onchange)="onChangeTeam($event)">
                   <option *ngFor="let t of teams" [value]="t.id">{{t.name}}</option>
                 </select>
               </div>
