Team - Aggiunti trasferimenti della squadra

--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -57,7 +57,6 @@
           <!--<div class="form-row" *ngIf="isError">
             <label>{{errorMessage}}</label>
           </div>-->
-
           <!-- button -->
           <button class="btn btn-primary mr-2" type="submit" (click)="save(false)" *ngIf="!isReadOnly">Salva</button>
           <button class="btn btn-primary mr-2" type="submit" (click)="save(true)" *ngIf="!isReadOnly && mode == 'create'">Salva + Crea</button>
@@ -176,55 +175,137 @@
 
           <!-- tab 5 -->
           <div class="tab-pane tabs-animation fade" id="tab-content-5" role="tabpanel">
-            <div class="row" style="background-color:pink">
-              <p>TAB 5</p>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="mb-3 card">
+                  <div class="card-header-tab card-header">
+                    <!--<div class="card-header-title">
+                      <i class="header-icon lnr-bicycle icon-gradient bg-love-kiss"> </i>
+                      Header Alternate Tabs
+                    </div>-->
+                    <ul class="nav">
+                      <li class="nav-item"><a data-toggle="tab" href="#tab-entrata" class="active nav-link">Entrata</a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#tab-uscita" class="nav-link">Uscita</a></li>
+                    </ul>
+                  </div>
+                  <div class="card-body">
+                    <div class="tab-content">
+                      <div class="tab-pane active" id="tab-entrata" role="tabpanel">
+                        <div class="table-responsive">
+                          <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                            <thead>
+                              <tr>
+                                <th>Giocatore</th>
+                                <th class="text-center">Da</th>
+                                <th class="text-center">Data</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr *ngFor="let tIn of transfersIn">
+                                <td>
+                                  <div class="widget-content p-0">
+                                    <div class="widget-content-wrapper">
+                                      <div class="widget-content-left flex2">
+                                        <div class="widget-heading">{{tIn.player}}</div>
+                                        <!--<div class="widget-subheading opacity-7">{{tIn.role}}</div>-->
+                                      </div>
+                                    </div>
+                                  </div>
+                                </td>
+                                <td class="text-center">{{tIn.teamOld}}</td>
+                                <!--<td class="text-center">{{tIn.teamNew}}</td>-->
+                                <td class="text-center">{{tIn.date}}</td>
+                                <td class="text-center">
+                                  <button type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm" (click)="detailPlayer(tIn.idPlayer)">Details</button>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                      <div class="tab-pane" id="tab-uscita" role="tabpanel">
+                        <div class="table-responsive">
+                          <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                            <thead>
+                              <tr>
+                                <th>Giocatore</th>
+                                <th class="text-center">A</th>
+                                <th class="text-center">Data</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr *ngFor="let tOut of transfersOut">
+                                <td>
+                                  <div class="widget-content p-0">
+                                    <div class="widget-content-wrapper">
+                                      <div class="widget-content-left flex2">
+                                        <div class="widget-heading">{{tOut.player}}</div>
+                                        <!--<div class="widget-subheading opacity-7">{{tOut.role}}</div>-->
+                                      </div>
+                                    </div>
+                                  </div>
+                                </td>
+                                <td class="text-center">{{tOut.teamOld}}</td>
+                                <!--<td class="text-center">{{tOut.teamNew}}</td>-->
+                                <td class="text-center">{{tOut.date}}</td>
+                                <td class="text-center">
+                                  <button type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm" (click)="detailPlayer(tOut.idPlayer)">Details</button>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- MODALE DI ERRORE -->
-<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" [ngStyle]="{'display': errorModalIsOpen ? 'block' : 'none', 'opacity': 1}">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="errorModalTitle">Errore</h5>
-        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button> -->
-      </div>
-      <div class="modal-body">
-        <p class="mb-0">
-          {{errorMessage}}
-        </p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Close</button>
+  <!-- MODALE DI ERRORE -->
+  <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" [ngStyle]="{'display': errorModalIsOpen ? 'block' : 'none', 'opacity': 1}">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="errorModalTitle">Errore</h5>
+          <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button> -->
+        </div>
+        <div class="modal-body">
+          <p class="mb-0">
+            {{errorMessage}}
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- <script>
-  // Example starter JavaScript for disabling form submissions if there are invalid fields
-          (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-              // Fetch all the forms we want to apply custom Bootstrap validation styles to
-              var forms = document.getElementsByClassName('needs-validation');
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                  if (form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                  }
-                  form.classList.add('was-validated');
-                }, false);
-              });
-            }, false);
-          })();
-        </script> -->
+  <!-- <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+            (function () {
+              'use strict';
+              window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                  form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                  }, false);
+                });
+              }, false);
+            })();
+          </script> -->
